kubernetes-networks/canary/web-canary.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-canary
  labels:
    name: web-canary
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: web-canary
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template: 
    metadata:
      name: web
      labels:
        app: web
    spec:
      volumes:
        - name: app
          emptyDir: {}
      containers:
        - name: web
          image: proreg92/otus_task1:1.0
          volumeMounts: 
            - name: app
              mountPath: /app
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
          livenessProbe:
            tcpSocket: { port: 8000 }  
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: web-canary
  labels:
    app: web
spec:
  selector:
    app: web
  type: ClusterIP
  clusterIP: None
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: web-canary
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "30"
spec:
  rules:
  - http:
      paths:
      - path: /web
        pathType: Prefix
        backend:
          service: 
            name: web-svc
            port: 
              number: 8000
